Refactor workflow contracts and simplify report generation